[gd_scene load_steps=10 format=3 uid="uid://cy8si6qk5lsnd"]

[ext_resource type="Shader" path="res://UI/MainMenu/SDFMainMenu.gdshader" id="1_04oax"]
[ext_resource type="Script" path="res://UI/MainMenu/main_menu.gd" id="1_cabx1"]
[ext_resource type="PackedScene" uid="uid://bakhk407mkat1" path="res://Test/black_hole.tscn" id="2_pedm3"]
[ext_resource type="Theme" uid="uid://b2orsuuil3dch" path="res://UI/MainMenu/Theme.tres" id="5_cy14d"]
[ext_resource type="PackedScene" uid="uid://d2v5hfbp7h6vc" path="res://UI/MainMenu/MenuButton2.tscn" id="5_iqa54"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_087vd"]
shader = ExtResource("1_04oax")
shader_parameter/FOV = 1.0
shader_parameter/cameraPos = Vector3(2.08165e-12, 2.08165e-12, -3)
shader_parameter/hRes = 192.0
shader_parameter/vRes = 384.0
shader_parameter/progress = 0.0
shader_parameter/lightPos = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)

[sub_resource type="Animation" id="Animation_6lbvp"]
resource_name = "Pulsate"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("0:material:shader_parameter/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.5, 1.5]
}

[sub_resource type="Animation" id="Animation_gllib"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("0:material:shader_parameter/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eebnd"]
_data = {
"Pulsate": SubResource("Animation_6lbvp"),
"RESET": SubResource("Animation_gllib")
}

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cabx1")

[node name="0" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_087vd")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -420.0
offset_bottom = 420.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(960, 960)

[node name="BlackHoleRings" parent="." instance=ExtResource("2_pedm3")]
position = Vector2(960, 540)
scale = Vector2(15, 15)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_eebnd")
}

[node name="Options" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.02
anchor_top = 0.65
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="VBoxContainer" parent="Options"]
layout_mode = 2
offset_top = -17.5
offset_right = 345.0
offset_bottom = 233.5

[node name="Continiue" parent="Options/HBoxContainer" instance=ExtResource("5_iqa54")]
layout_mode = 2
disabled = true
text = "Continue
"

[node name="StartNewGame" parent="Options/HBoxContainer" instance=ExtResource("5_iqa54")]
layout_mode = 2
text = "Start New Game
"

[node name="Settings" parent="Options/HBoxContainer" instance=ExtResource("5_iqa54")]
layout_mode = 2
text = "Settings
"

[node name="Quit" parent="Options/HBoxContainer" instance=ExtResource("5_iqa54")]
layout_mode = 2
text = "Quit"

[node name="Settings" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.7
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_cy14d")

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2

[node name="Label1" type="Label" parent="Settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("5_cy14d")
text = "Master Volume"
horizontal_alignment = 1

[node name="Volume" type="HSlider" parent="Settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme = ExtResource("5_cy14d")
step = 10.0
value = 100.0
scrollable = false
tick_count = 11
ticks_on_borders = true

[node name="Label2" type="Label" parent="Settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("5_cy14d")
text = "Effects Volume
"
horizontal_alignment = 1

[node name="Effects" type="HSlider" parent="Settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme = ExtResource("5_cy14d")
step = 10.0
value = 100.0
scrollable = false
tick_count = 11
ticks_on_borders = true

[node name="Label3" type="Label" parent="Settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("5_cy14d")
text = "Music Volume"
horizontal_alignment = 1

[node name="Music" type="HSlider" parent="Settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme = ExtResource("5_cy14d")
step = 10.0
value = 100.0
scrollable = false
tick_count = 11
ticks_on_borders = true

[node name="Back" type="Button" parent="Settings/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("5_cy14d")
text = "Back"

[connection signal="pressed" from="Options/HBoxContainer/Continiue" to="." method="_on_continiue_pressed"]
[connection signal="pressed" from="Options/HBoxContainer/StartNewGame" to="." method="_on_start_new_game_pressed"]
[connection signal="pressed" from="Options/HBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Options/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/Back" to="." method="_on_back_pressed"]
